Adjust height of header for tablet version of component

--- a/src/components/InventoryItemDetails/InventoryItemDetails.scss
+++ b/src/components/InventoryItemDetails/InventoryItemDetails.scss
@@ -20,6 +20,10 @@
         bottom: 4rem;
         background-color: $white;
         border-radius: 0.1875rem;
+
+        @include tablet {
+            bottom: 7rem;
+        }
     }
 
     &__left {
