--- a/src/pages/InventoryListPage/InventoryListPage.scss
+++ b/src/pages/InventoryListPage/InventoryListPage.scss
@@ -105,6 +105,7 @@
         border-radius: 1.875rem;
         width: 85%;
         margin-bottom: 1.5rem;
+        text-decoration: none;
 
         @include tablet {
             margin-bottom: 1rem;
