--- a/src/pages/WarehouseDetails/WarehouseDetails.scss
+++ b/src/pages/WarehouseDetails/WarehouseDetails.scss
@@ -40,8 +40,10 @@
             object-fit: contain;
             background-position: center;
             cursor: pointer;
+            text-decoration: none;
             &-text{
                 display: none;
+                text-decoration: none;
             }
         }
         &-return{
@@ -189,11 +191,13 @@
                 background-size: 1rem;
                 background-position-x: 1rem;
                 margin: 0.5rem 1rem;
+                text-decoration: none;
                 &-text{
                     display: flex;
                     align-items: center;
                     justify-content: flex-end;
                     margin-right: -1rem;
+                    text-decoration: none;
                 }
             }
         }
