--- a/src/pages/WarehousePage/WarehousePage.scss
+++ b/src/pages/WarehousePage/WarehousePage.scss
@@ -101,9 +101,11 @@
         background-color: $instock-indigo;
         padding: 0.5rem 0 0.5rem 0;
         border-radius: 1.875rem;
-        width: 85%;
+        width: 100%;
         margin-bottom: 1.5rem;
-
+        &-link {
+        width: 85%;
+        }
         @include tablet {
             margin-bottom: 1rem;
         }
