--- a/src/pages/WarehouseDetails/WarehouseDetails.scss
+++ b/src/pages/WarehouseDetails/WarehouseDetails.scss
@@ -106,8 +106,7 @@
             &-item{
                 cursor: pointer;
                 color: $instock-indigo;
-              
-                
+                text-decoration: none;
             }
         }
         &-top{
