--- a/src/components/InventoryListItem/InventoryListItem.scss
+++ b/src/components/InventoryListItem/InventoryListItem.scss
@@ -5,6 +5,7 @@
 .link {
     text-decoration: none;
     color: $instock-indigo;
+    font-weight: 600;
 }
 
 .inventory{
@@ -20,25 +21,46 @@
     }
     &__text{
         margin: 0;
+
+        &-subheading {
+            color: $slate;
+        }
+        &-link {
+            background: url('../../assets/icons/chevron_right-24px.svg') no-repeat 100% 100%;
+        }
     }
     &__box{
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-start;
         padding: 1rem;
+        &-mobile-column {
+            padding-right: 3rem;
+            width: 50%;
+        }
     }   
     &__mobile-column-label{
         padding-top: 1rem;
+
     }
     &__mobile-options{
         padding: 1rem;
         display: flex;
         justify-content: space-between;
     }
-    &-status{
+    &-status {
         background-color: rgba(21, 132, 99, 0.07);
         border-radius: 20px;
         padding: 0.25rem;
         margin-top: 1rem;
+        color: #158463;
+
+        &--out {
+        background-color: rgba(201, 69, 21, 0.07);
+        border-radius: 20px;
+        padding: 0.25rem;
+        margin-top: 1rem;
+        color: #C94515;
+        }
     }
     &__containerTab{
         display: none;
